# force-quit-dialog-extension

./: .gitignore  extension.js  force-quit-dialog-extension.doap  meson.build  metadata.json.in  stylesheet.scss
.tx/: config
debian/: changelog  control  copyright  install
po/: LINGUAS  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  force-quit-dialog-extension.pot  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  gu.po  (+78 more)
schemas/: gschemas.compiled  org.gnome.shell.extensions.force-quit-dialog.gschema.xml
